Added album feature to lyrics fetcher script to download all tracks in a named album, writing them to filenames including the track number

--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 lyricsgenius = "*"
 python-slugify = "*"
+musicbrainzngs = "*"
+fuzzywuzzy = "*"
+python-levenshtein = "*"
 
 [dev-packages]
 
